Correção de erros e otimização do código

--- a/views/categorias/form.ejs
+++ b/views/categorias/form.ejs
@@ -10,6 +10,11 @@
       <input type="text" name="nome" required>
     </div>
     
+    <div>
+      <label>Descrição:</label>
+      <textarea name="descricao"></textarea>
+    </div>
+    
     <button type="submit">Salvar</button>
   </form>
 </body>
